# fundamental

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
src/common/: mod.rs
src/financial_stmt/: balance_sheet.rs  cash_flow.rs  income_statement.rs  mod.rs  sec_client.rs
src/interface/: mod.rs
src/processor/: mod.rs
src/ratios/: mod.rs
