[package]
name = "fundamental"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
# Use for Serialize and Deserialize
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
quick-xml = "0.31"
futures = "0.3.31"
